<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="login_form_name">Register/Login</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="male_button">Male</string>
    <string name="female_button">Female</string>
    <!-- Strings related to URLs -->
    <string name="login_url">/user/login</string>
    <string name="register_url">/user/register</string>
    <string name="person_url">/person</string>
    <string name="event_url">/event</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_user_name">%s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Strings related to map -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAa_0xHOn1gdMQDyLdBBpJb8NpkTVkhmMk</string>
    <string name="birth_event">birth</string>
    <string name="marriage_event">marriage</string>
    <string name="death_event">death</string>
    <string name="test">test</string>
</resources>